--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,13 +5,13 @@ orbs:
 executors:
   with-chrome-and-firefox:
     docker:
-      - image: 'cypress/browsers:node16.5.0-chrome97-ff96'
-      environment:
-        CYPRESS_viewport: macbook-15
-        CYPRESS_takeScreenshots: true
-        CYPRESS_RECORD_KEY: bcc83a31-a9da-4c87-98e9-f023d062e90d
-        CYPRESS_RETRIES: 3
-      resource_class: small
+      - image: cypress/browsers:node16.5.0-chrome97-ff96
+        environment:
+          CYPRESS_viewport: macbook-15
+          CYPRESS_takeScreenshots: true
+          CYPRESS_RECORD_KEY: bcc83a31-a9da-4c87-98e9-f023d062e90d
+          CYPRESS_RETRIES: 3
+    resource_class: small
 
 commands:
   slack-reporter:
