Still trying to polish this thing
Signed-off-by: Jason L McFarland <jason.mcfarland@vouch.us>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,7 +35,7 @@ commands:
 qa-workflow: &qa-workflow
   jobs:
     - cypress/install:
-        build: 'npm run build'
+        yarn: true
     - cypress/run:
         requires:
           - cypress/install
