Might've finally solved the cy.stub issue
Signed-off-by: Jason L McFarland <jason.mcfarland@vouch.us>

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -41,7 +41,7 @@ qa-workflow: &qa-workflow
         name: "MarketingQA Publish_Site Tests"
 #        executor: with-chrome
 #        browser: chrome
-        spec: cypress/integration/*
+        spec: ./cypress/integration/*
         no-workspace: true
         yarn: true
         post-steps:
