Now the tests choose a random sample of links to test. Also added the triggerPipeline.js file, which has a commented-out function. This function is what is used by the Zapier Zap that is connected to the Vouch.us site_publish webhook. It requires node-fetch, so i added this to the list of dependencies.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,10 @@
   },
   "homepage": "https://github.com/svinstech/marketingqa#readme",
   "dependencies": {
-    "cypress": "^9.4.1"
+    "cypress": "^9.4.1",
+    "node-fetch": "^2.6.7"
+  },
+  "devDependencies": {
+    "array-shuffle": "^3.0.0"
   }
 }
