--- a/package.json
+++ b/package.json
@@ -18,9 +18,7 @@
   "homepage": "https://github.com/svinstech/marketingqa#readme",
   "dependencies": {
     "cypress": "^9.4.1",
-    "node-fetch": "^2.6.7"
-  },
-  "devDependencies": {
-    "array-shuffle": "^3.0.0"
+    "node-fetch": "^2.6.7",
+    "shuffle-array": "^1.0.1"
   }
 }
