--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -6,7 +6,8 @@ executors:
   with-chrome:
     docker:
       - image: 'cypress/browsers:node16.5.0-chrome97-ff96'
-#        environment:
+       environment:
+          SLACK_WEBHOOK: ${{ secrets.SLACK_LINK_CHECKER_INCOMING_WEBHOOK }}
 #          CYPRESS_viewport: macbook-15
 #          CYPRESS_takeScreenshots: true
 #          CYPRESS_RECORD_KEY: bcc83a31-a9da-4c87-98e9-f023d062e90d
@@ -15,8 +16,7 @@ executors:
 commands:
   slack-reporter:
     steps:
-      env:
-        SLACK_WEBHOOK: ${{ secrets.SLACK_LINK_CHECKER_INCOMING_WEBHOOK }}
+      
       - run:
           name: Slack - Setting Failure Condition
           command: |
