Added debugging logs for the webhook. Also added a command that will set the environment variable at runtime.

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ executors:
     docker:
       - image: 'cypress/browsers:node16.5.0-chrome97-ff96'
         environment:
-          SLACK_WEBHOOK: ${{ secrets.SLACK_LINK_CHECKER_INCOMING_WEBHOOK }}
+          # SLACK_WEBHOOK: ${{ secrets.SLACK_LINK_CHECKER_INCOMING_WEBHOOK }}
 #          CYPRESS_viewport: macbook-15
 #          CYPRESS_takeScreenshots: true
 #          CYPRESS_RECORD_KEY: bcc83a31-a9da-4c87-98e9-f023d062e90d
@@ -16,7 +16,6 @@ executors:
 commands:
   slack-reporter:
     steps:
-      
       - run:
           name: Slack - Setting Failure Condition
           command: |
@@ -31,7 +30,10 @@ commands:
           name: Slack - Sending Status Alert
           shell: /bin/bash
           when: always
-          command: ./.circleci/utilities/send_build_status_to_slack.sh
+          command: |
+            echo 'export SLACK_WEBHOOK=$(cat secrets.SLACK_LINK_CHECKER_INCOMING_WEBHOOK)' >> "$BASH_ENV"
+            source "$BASH_ENV"
+            ./.circleci/utilities/send_build_status_to_slack.sh
           no_output_timeout: 15m
 
 qa-workflow: &qa-workflow
