Converted Javascript tests to Typescript tests.

--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "cypress": "^11.2.0",
     "node-fetch": "^2.6.7",
     "shuffle-array": "^1.0.1"
+  },
+  "devDependencies": {
+    "typescript": "^4.9.3"
   }
 }
