--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,12 +2,6 @@ version: 2.1
 orbs:
   cypress: cypress-io/cypress@1
 
-executors:
-  with-chrome:
-    docker:
-      - image: cypress/base-14
-      # - image: 'cypress/browsers:node16.16.0-chrome107-ff107'
-
 commands:
   slack-reporter:
     steps:
@@ -36,6 +30,7 @@ qa-workflow: &qa-workflow
 #        requires:
 #          - cypress/install
         name: "MarketingQA Publish_Site Tests"
+        executor: cypress/base-14
 #        executor: with-chrome
 #        browser: chrome
         spec: ./cypress/integration/*
