--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -22,6 +23,7 @@
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
+    "@types/shuffle-array": "^1.0.2",
     "typescript": "^4.9.3"
   }
 }
