--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "shuffle-array": "^1.0.1"
   },
   "devDependencies": {
+    "@cypress/skip-test": "^2.6.1",
     "@types/shuffle-array": "^1.0.2",
     "typescript": "^4.9.3"
   }
