--- a/package.json
+++ b/package.json
@@ -19,12 +19,16 @@
   "dependencies": {
     "cypress": "^10.0.0",
     "node-fetch": "^2.6.7",
-    "shuffle-array": "^1.0.1"
+    "shuffle-array": "^1.0.1",
+    "simple-bin-help": "1.7.7"
   },
   "devDependencies": {
     "@cypress/grep": "^3.1.5",
     "@cypress/skip-test": "^2.6.1",
     "@types/shuffle-array": "^1.0.2",
     "typescript": "^4.9.3"
+  },
+  "engines" : { 
+    "node" : ">=14.16"
   }
 }
